--- a/src/partials/our-task.html
+++ b/src/partials/our-task.html
@@ -25,11 +25,11 @@
               <span>Log_Out</span><i></i></button
           ></a>
         </div>
-        <a href="./logo.html"
+        <a href="./user.html"
           ><button class="btn-style pre" style="--clr: #39ff14">
             <span>Pre</span><i></i></button
         ></a>
-        <a href="./our-task.html"
+        <a href="./problem.html"
           ><button class="btn-style next" style="--clr: #ff44cc">
             <span>Next</span><i></i></button
         ></a>
@@ -37,58 +37,47 @@
           ><button class="btn-style home" style="--clr: #0ff0fc">
             <span>Home</span><i></i></button
         ></a>
-        <!-- <a class="nav-button-prev" href="./logo.html">Pre</a>
-        <a class="nav-button-next" href="./problem.html">Next</a>
-        <a class="nav-button-home" href="../index.html">Home</a> -->
-
-        <div class="user-wrapper">
-          <div class="container-user" id="c1">
-            <div class="info-user">
-              <h3 class="user-title">Маруся Халіфко</h3>
-              <p class="user-about">30 років</p>
-              <p class="user-about">Акторка кіно</p>
-              <p class="user-about">Цікавиться книгами та вишивкою</p>
-              <p class="user-about">
-                Обожнює грати в покер і перегдядати фільми
+        <div class="card-box-wrap">
+          <div class="box-card">
+            <b></b>
+            <img class="task-img mirror-img" src="../images/repeta.png" />
+            <div class="content-boxx">
+              <p class="info-content">
+                Задача 1. Розробити свйт для людей як для себе
               </p>
-              <p class="user-about">
-                Потребує функціональний додаток-бібліотеку, який забезпечить
-                комплексний підхід для планування власних цілей.
+            </div>
+          </div>
+          <div class="box-card">
+            <b></b>
+            <img class="task-img mirror-img" src="../images/repeta.png" />
+            <div class="content-boxx">
+              <p class="info-content">
+                Задача 2. Щоб заходили і око радувалось
+              </p>
+            </div>
+          </div>
+          <div class="box-card">
+            <b></b>
+            <img class="task-img mirror-img" src="../images/repeta.png" />
+            <div class="content-boxx">
+              <p class="info-content">
+                Задача 3. Щоб все було і нам за уе нічого не було. Отримати офер
+                і сертифікат
+              </p>
+            </div>
+          </div>
+          <div class="box-card">
+            <b></b>
+            <img class="task-img mirror-img" src="../images/repeta.png" />
+            <div class="content-boxx">
+              <p class="info-content">
+                Задача 4. Щоб робило і не падав сервер і так далі і тому подібне
               </p>
             </div>
           </div>
         </div>
-        <div class="user-box">
-          <article class="card-herov">
-            <div class="content">
-              <img
-                class="user-img"
-                src="../images/mia.png"
-                alt="user"
-                width="200"
-              />
-            </div>
-            <span class="all top"></span>
-            <span class="all right"></span>
-            <span class="all bottom"></span>
-            <span class="all left"></span>
-          </article>
-        </div>
 
-        <!-- <div class="user-box">
-          <span class="user-span"></span>
-          <span class="user-span"></span>
-          <span class="user-span"></span>
-          <span class="user-span"></span>
-          <div class="content">
-            <img
-              class="user-img"
-              src="../images/mia.png"
-              alt="user"
-              width="200"
-            />
-          </div>
-        </div> -->
+        <script src="https://kit.fontawesome.com/95a02bd20d.js"></script>
         <span class="rain"></span>
         <span class="rain"></span>
         <span class="rain"></span>
