--- a/src/partials/problem.html
+++ b/src/partials/problem.html
@@ -24,7 +24,7 @@
               <span>Log_Out</span><i></i></button
           ></a>
         </div>
-                        <a href="./user.html"
+          <a href="./our-task.html"
           ><button class="btn-style pre" style="--clr: #39ff14">
             <span>Pre</span><i></i></button
         ></a>
