--- a/src/partials/thanks.html
+++ b/src/partials/thanks.html
@@ -40,14 +40,9 @@
         <a class="nav-button-prev" href="./team2.html">Pre</a>
         <a class="nav-button-next" href="../index.html">Home</a> -->
         <div class="post-wrapp">
-          <img class="post-img" src="../images/kob.png" alt="Kobzar" />
+          <img class="post-img" src="../images/repeta.png" alt="repeta" />
           <div class="post-box">
-            <p class="post-text">
-              І на оновленій землі врага не буде, супостата, а буде син, і буде
-              мати,<br />
-              і будуть люде на землі.
-            </p>
-            <p class="post-autor">Т.Г.Шевченко</p>
+            <p class="post-text">Думаю, ви готові... Але це не точно)))</p>
           </div>
         </div>
         <h2 class="thanks-title">
