--- a/src/sass/_thanks.scss
+++ b/src/sass/_thanks.scss
@@ -52,10 +52,11 @@
   width: 700px;
   display: flex;
   flex-direction: row-reverse;
+  align-items: end;
 }
 
 .post-img {
-  width: 250px;
+  width: 180px;
 }
 
 .post-box {
@@ -65,11 +66,11 @@
 .post-text {
   font-style: italic;
   font-size: 22px;
-  color: orange;
+  color: #0f0;
 }
 
 .post-autor {
   font-size: 16px;
-  color: orange;
+  color: #0f0;
   text-align: end;
 }
