--- a/src/partials/user.html
+++ b/src/partials/user.html
@@ -44,16 +44,19 @@
         <div class="user-wrapper">
           <div class="container-user" id="c1">
             <div class="info-user">
-              <h3 class="user-title">Маруся Халіфко</h3>
-              <p class="user-about">30 років</p>
-              <p class="user-about">Акторка кіно</p>
-              <p class="user-about">Цікавиться книгами та вишивкою</p>
+              <h3 class="user-title">Віктор Андрійович</h3>
+              <p class="user-about">69 років</p>
+              <p class="user-about">Пенсіонер</p>
               <p class="user-about">
-                Обожнює грати в покер і перегдядати фільми
+                Захоплюється живописом, бджільництвом, гончарством,
+                колекціонуванням предметів української старовини.
               </p>
               <p class="user-about">
-                Потребує функціональний додаток-бібліотеку, який забезпечить
-                комплексний підхід для планування власних цілей.
+                Дуже любить проводити час у родинному колі. Обожнює домашніх
+                тварин.
+              </p>
+              <p class="user-about">
+                Потребує комплексний додаток для пошуку втрачених тварин.
               </p>
             </div>
           </div>
@@ -63,9 +66,9 @@
             <div class="content">
               <img
                 class="user-img"
-                src="../images/mia.png"
+                src="../images/victor.png"
                 alt="user"
-                width="200"
+                width="250"
               />
             </div>
             <span class="all top"></span>
