--- a/src/partials/problem.html
+++ b/src/partials/problem.html
@@ -63,8 +63,13 @@
                 >
               </li>
               <li class="problem-item" style="--clr: #dc88d4">
-                <a class="problem-link" href="#" data-text="&nbsp;мультимовність"
-                  >&nbsp;мультимовність&nbsp;</a
+                <a class="problem-link" href="#" data-text="&nbsp;персоналізація"
+                  >&nbsp;персоналізація&nbsp;</a
+                >
+              </li>
+                 <li class="problem-item" style="--clr: #dc11d4">
+                <a class="problem-link" href="#" data-text="&nbsp;інтеграція"
+                  >&nbsp;інтеграція&nbsp;</a
                 >
               </li>
             </ul>
@@ -77,7 +82,7 @@
               width="310"
             />
             <iframe
-              src="https://books-reading-reactor.netlify.app/"
+              src="https://smokekans.github.io/YourPet/"
               class="mobile"
             ></iframe>
           </div>
