--- a/src/partials/team1.html
+++ b/src/partials/team1.html
@@ -112,7 +112,7 @@
                   </div>
                 </div>
                 <h3>Антоніна Остапюк</h3>
-                <p>Scrum-master/Developer</p>
+                <p>Developer</p>
               </div>
             </div>
             <div class="face face2">
@@ -155,7 +155,7 @@
                   </div>
                 </div>
                 <h3>Анна Денисова</h3>
-                <p>Developer</p>
+                <eveloper>Scrum-master/Developer</p>
               </div>
             </div>
             <div class="face face2">
@@ -197,7 +197,7 @@
                     />
                   </div>
                 </div>
-                <h3>Сергій Соловйов</h3>
+                <h3>Наталія Шевченко</h3>
                 <p>Developer</p>
               </div>
             </div>
@@ -205,7 +205,7 @@
               <div class="content">
                 <a class="team-link" href="#"
                   ><img
-                    src="../images/SergS.jpg"
+                    src="../images/NatShev.png"
                     class="team-card"
                     width="200"
                     height="300"
@@ -240,7 +240,7 @@
                     />
                   </div>
                 </div>
-                <h3>Сергій Казакевич</h3>
+                <h3>Дмитро Ібрагімов</h3>
                 <p>Developer</p>
               </div>
             </div>
@@ -248,7 +248,7 @@
               <div class="content">
                 <a class="team-link" href="#"
                   ><img
-                    src="../images/SergK.jpg"
+                    src="../images/DimIbra.png"
                     class="team-card"
                     width="200"
                     height="300"
