--- a/src/partials/user.html
+++ b/src/partials/user.html
@@ -56,7 +56,7 @@
                 тварин.
               </p>
               <p class="user-about">
-                Потребує комплексний додаток для пошуку втрачених тварин.
+                Потребує веб-додаток для пошуку втраченого домашнього улюбленця.
               </p>
             </div>
           </div>
