--- a/src/partials/our-task.html
+++ b/src/partials/our-task.html
@@ -43,7 +43,8 @@
             <img class="task-img mirror-img" src="../images/repeta.png" />
             <div class="content-boxx">
               <p class="info-content">
-                Задача 1. Розробити свйт для людей як для себе
+                Забезпечити правильну інтеграцію між фронтендом та серверною
+                частиною
               </p>
             </div>
           </div>
@@ -52,7 +53,8 @@
             <img class="task-img mirror-img" src="../images/repeta.png" />
             <div class="content-boxx">
               <p class="info-content">
-                Задача 2. Щоб заходили і око радувалось
+                Розробка інтерфейсу користувача, який буде забезпечувати зручну
+                та інтуїтивну навігацію
               </p>
             </div>
           </div>
@@ -61,8 +63,8 @@
             <img class="task-img mirror-img" src="../images/repeta.png" />
             <div class="content-boxx">
               <p class="info-content">
-                Задача 3. Щоб все було і нам за уе нічого не було. Отримати офер
-                і сертифікат
+                Реалізація можливості створення та редагування особистого
+                кабінету користувача
               </p>
             </div>
           </div>
@@ -71,7 +73,8 @@
             <img class="task-img mirror-img" src="../images/repeta.png" />
             <div class="content-boxx">
               <p class="info-content">
-                Задача 4. Щоб робило і не падав сервер і так далі і тому подібне
+                Розробка механізмів пошуку, фільтрації, створення нових
+                оголошень
               </p>
             </div>
           </div>
