--- a/src/partials/team2.html
+++ b/src/partials/team2.html
@@ -111,7 +111,7 @@
                     />
                   </div>
                 </div>
-                <h3>Владислав Марущак</h3>
+                <h3>Василь Теглівець</h3>
                 <p>Developer</p>
               </div>
             </div>
@@ -119,7 +119,7 @@
               <div class="content">
                 <a class="team-link" href="#"
                   ><img
-                    src="../images/Maruv.jpg"
+                    src="../images/VasylT.jpeg"
                     class="team-card"
                     width="200"
                     height="300"
@@ -163,6 +163,49 @@
                 <a class="team-link" href="#"
                   ><img
                     src="../images/Ivanka.jpg"
+                    class="team-card"
+                    width="200"
+                    height="300"
+                /></a>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="face face1">
+              <div class="content">
+                <div class="wrapper-logo-mini">
+                  <div class="box-logo-mini">
+                    <img
+                      src="../images/NodeLogos.png"
+                      class="logo-name-mini"
+                      alt="NodeMoon Team"
+                    />
+                    <img
+                      src="../images/orbite.png"
+                      class="logo-orb-mini"
+                      alt="NodeMoon Team"
+                    />
+                    <img
+                      src="../images/orbite.png"
+                      class="logo-orbb-mini"
+                      alt="NodeMoon Team"
+                    />
+                    <img
+                      src="../images/moon.png"
+                      class="logo-mini"
+                      alt="NodeMoon Team"
+                    />
+                  </div>
+                </div>
+                <h3>Надія Козулькевич</h3>
+                <p>Developer</p>
+              </div>
+            </div>
+            <div class="face face2">
+              <div class="content">
+                <a class="team-link" href="#"
+                  ><img
+                    src="../images/NadKoz.jpg"
                     class="team-card"
                     width="200"
                     height="300"
