--- a/src/partials/team2.html
+++ b/src/partials/team2.html
@@ -205,7 +205,7 @@
               <div class="content">
                 <a class="team-link" href="#"
                   ><img
-                    src="../images/NadKoz.jpg"
+                    src="../images/photo.png"
                     class="team-card"
                     width="200"
                     height="300"
