--- a/src/sass/_technologies.scss
+++ b/src/sass/_technologies.scss
@@ -1,5 +1,5 @@
 .tech-wrapp {
-  padding: 20px 120px;
+  padding: 70px 130px;
 }
 
 .icons {
@@ -16,15 +16,15 @@
   cursor: pointer;
   font-size: 1.3em;
   transition: 0.3s;
-  margin: 20px;
+  margin: 15px;
 }
 #javascript,
 #axios,
 #node-js,
-#sass,
+#claudinary,
 #redux,
-#netlify,
-#ant {
+#passport,
+#express {
   animation-delay: 500ms;
 }
 #git,
@@ -35,12 +35,12 @@
 #material {
   animation-delay: 1500ms;
 }
-#api,
+#nodemoon,
 #figma,
 #html,
 #react,
 #formik,
-#chartjs,
+#multer,
 #babel {
   animation-delay: 2500ms;
 }
