--- a/src/partials/technologies.html
+++ b/src/partials/technologies.html
@@ -71,9 +71,9 @@
               width="120px"
             />
             <img
-              src="../images/api.svg"
+              src="../images/nodemoon.png"
               alt=""
-              id="api"
+              id="nodemoon"
               class="icon"
               width="120px"
             />
@@ -128,13 +128,7 @@
               class="icon"
               width="120px"
             />
-            <img
-              src="../images/sass.svg"
-              alt=""
-              id="sass"
-              class="icon"
-              width="120px"
-            />
+
             <img
               src="../images/vscode.svg"
               alt=""
@@ -149,24 +143,18 @@
               class="icon"
               width="120px"
             />
+
             <img
-              src="../images/chartjs.svg"
+              src="../images/express.png"
               alt=""
-              id="chartjs"
+              id="express"
               class="icon"
               width="120px"
             />
             <img
-              src="../images/ant.png"
+              src="../images/passport.png"
               alt=""
-              id="ant"
-              class="icon"
-              width="120px"
-            />
-            <img
-              src="../images/netlify.svg"
-              alt=""
-              id="netlify"
+              id="passport"
               class="icon"
               width="120px"
             />
@@ -183,6 +171,20 @@
               id="babel"
               class="icon"
               width="120px"
+            />
+            <img
+              src="../images/claudinary.png"
+              alt=""
+              id="claudinary"
+              class="icon"
+              width="180px"
+            />
+            <img
+              src="../images/multer.png"
+              alt=""
+              id="multer"
+              class="icon"
+              width="180px"
             />
           </div>
         </div>
